src/Base/main/default/objects/Project_Labor_Rate__c/Project_Labor_Rate__c.object-meta.xml
<CustomObject>
    <label>Project Labor Rate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Labor Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>