src/Base/main/default/objects/Project_Labor_Rate__c/fields/Time_Card_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_Variable_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Wage Class (TCV2)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected value must be an Accounting Variable of type Time Card Variable 2.</errorMessage>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Time Card Variable 2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Project Labor Rates</relationshipLabel>
    <relationshipName>Project_Labor_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>